--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -63,13 +63,49 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.5;
+
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+
+    .min-hand{
+      width: 53%;
+      left: -3%;
+    }
+
+    .second-hand{
+      width: 55%;
+      left: -5%;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand')
+    const minHand = document.querySelector('.min-hand')
+    const hourHand = document.querySelector('.hour-hand')
 
 
+    const setDate = () =>{
+      const now = new Date()
+
+      const seconds = now.getSeconds()
+      const secondsDegress = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegress}deg)`
+
+      const mins = now.getMinutes()
+      const minutesDegress = ((mins / 60) * 360) + 90
+      minHand.style.transform = `rotate(${minutesDegress}deg)`
+
+      const hours = now.getHours()
+      const hoursDegress = ((hours / 60) * 360) + 90
+      minHand.style.transform = `rotate(${hours}deg)`
+    }
+
+
+    setInterval(setDate, 1000)
   </script>
 </body>
 </html>
