--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,6 +22,22 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+    :root{
+      --base :  #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+
+
+    img{
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl{
+      color: var(--base);
+    }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -46,6 +62,18 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input')
+
+    const handleChange = (e)=>{
+      const suffix = e.target.dataset.sizing || '';
+
+      document.documentElement.style.setProperty(`--${e.target.name}`, `${e.target.value}${suffix}`)
+
+      console.log(e.target.dataset.sizing)
+    }
+
+    inputs.forEach(input => input.addEventListener('change',handleChange ))
+
   </script>
 
 </body>
