--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -27,6 +27,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -44,6 +45,11 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -57,7 +63,25 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+
+    .panel > *:first-child{
+      transform: translateY(-100%);
+    }
+
+    .panel > *:last-child{
+      transform: translateY(100%);
+    }
+
+    .panel.open > *:first-child,
+    .panel.open > *:last-child{
+      transform: translateY(0);
+    }
+
 
     .panel p {
       text-transform: uppercase;
@@ -72,6 +96,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex: 5;
     }
 
   </style>
@@ -106,7 +131,13 @@
   </div>
 
   <script>
-
+    const panels = document.querySelectorAll('.panel')
+    panels.forEach(panel => panel.addEventListener('click', ()=>panel.classList.toggle('open')))
+    panels.forEach(panel => panel.addEventListener('transitioned', (e)=>{
+      if(panel.propetyName.includes('flex-grow')){
+        panel.classList.toggle('open-active')
+      }
+    }))
   </script>
 
 
