--- a/16 - Mouse Move Shadow/index-START.html
+++ b/16 - Mouse Move Shadow/index-START.html
@@ -36,6 +36,33 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero')
+  const text = hero.querySelector('h1')
+  const walk = 100
+
+  function shadow(e){
+    const {offsetWidth: width, offsetHeight: height} = hero
+    let {offsetX: x, offsetY: y} = e
+
+    if(this != e.target){
+      x = x + e.taget.offsetLeft
+      y = y  + e.taget.offsetTop
+    }
+
+    const xWalke = (x / width * walk) - (walk / 2)
+    const yWalke = (y / height * walk) - (walk / 2)
+
+    text.style.textShadow = `
+        ${xWalke}px ${yWalke}px 0 rgba(255,0,255,0.7),
+        ${xWalke * -1}px ${yWalke}px 0 rgba(0,255,255,0.7),
+        ${yWalke}px ${xWalke * -1}px 0 rgba(0,255,0,0.7),
+        ${yWalke * -1}px ${xWalke}px 0 rgba(0,0,255,0.7)
+      `
+  }
+
+
+  hero.addEventListener('mousemove', shadow)
+
 </script>
 </body>
 </html>
